[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]

[sub_resource type="Animation" id=3]
resource_name = "Levels"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("B1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -134, 53 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("B2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 58, 53 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "first_menu"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("B1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 58, 53 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("B2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -134, 53 ) ]
}

[sub_resource type="AnimationNodeBlend2" id=4]

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "first_menu"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Levels"

[sub_resource type="AnimationNodeBlendTree" id=2]
graph_offset = Vector2( -365.782, 0 )
nodes/anims/node = SubResource( 4 )
nodes/anims/position = Vector2( -20.7816, 69 )
nodes/first_menu/node = SubResource( 5 )
nodes/first_menu/position = Vector2( -260, 60 )
nodes/levels/node = SubResource( 6 )
nodes/levels/position = Vector2( -260, 200 )
node_connections = [ "output", 0, "anims", "anims", 0, "first_menu", "anims", 1, "levels" ]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="B1" type="Control" parent="."]
margin_left = 58.0
margin_top = 53.0
margin_right = 123.0
margin_bottom = 119.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="B1"]
margin_left = 12.0
margin_top = 7.0
margin_right = 53.0
margin_bottom = 27.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="B1"]
margin_left = 12.0
margin_top = 37.0
margin_right = 53.0
margin_bottom = 57.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B2" type="Control" parent="."]
margin_left = -134.0
margin_top = 53.0
margin_right = -7.99998
margin_bottom = 119.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Space_mission" type="Button" parent="B2"]
margin_left = 12.0
margin_top = 7.0
margin_right = 53.0
margin_bottom = 27.0
text = "Space mission"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Go_to_menu" type="Button" parent="B2"]
margin_left = 12.0
margin_top = 37.0
margin_right = 116.0
margin_bottom = 57.0
text = "Go to menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anim" type="AnimationPlayer" parent="."]
anims/Levels = SubResource( 3 )
anims/first_menu = SubResource( 1 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 2 )
anim_player = NodePath("../Anim")
active = true
parameters/anims/blend_amount = 0.0
[connection signal="pressed" from="B1/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="B1/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="B2/Space_mission" to="." method="_on_Space_mission_pressed"]
[connection signal="pressed" from="B2/Go_to_menu" to="." method="_on_Go_to_menu_pressed"]
